<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_garden_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.henallux.freegarden.GardenProfile">

    <!--Layout general-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Titre de l'activité-->
        <TextView
            android:text="@string/mainMenuTitle"
            android:textSize="@dimen/mainTitleTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="20"/>
        <!--Layout horizontal englobant les différents champs-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="70">
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"/>
            <ScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/owner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:id="@+id/ownerText"
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/labelMargin"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:id="@+id/adrressText"
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/labelMargin"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:id="@+id/DescriptionText"
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="150dp"
                            android:layout_weight="60" />
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/labelMargin"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/surface"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:id="@+id/surfaceText"
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/labelMargin"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:id="@+id/emailText"
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/labelMargin"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/telephoneNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:textSize="@dimen/labelTextSize"
                            />
                        <TextView
                            android:text="/"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="60"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>
            </ScrollView>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="10">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"/>
            <Button
                android:text="@string/groupRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textAllCaps="false"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"/>
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
