<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.henallux.freegarden.MainActivity">

    <!--Layout general-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Titre de l'activité-->
        <TextView
            android:text="@string/mainMenuTitle"
            android:textSize="@dimen/mainTitleTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="30"/>
        <!--Layout horizontal englobant les différents champs-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="60">
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="80">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/loginLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/loginInput"
                        android:textSize="@dimen/labelTextSize"
                        android:layout_weight="35"/>
                    <EditText
                        android:id="@+id/loginInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="Login"
                        android:layout_weight="65"/>
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/passwordLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/labelTextSize"
                        android:layout_weight="35"/>
                    <EditText
                        android:id="@+id/passwordInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_below="@+id/loginInput"
                        android:hint="Password"
                        android:layout_weight="65"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/createAccountButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createNewAccountButton"
                        android:textAllCaps="false"
                        android:onClick="newAccount"/>
                    <Button
                        android:id="@+id/singInButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/passwordInput"
                        android:text="Sign in"
                        android:textAllCaps="false" />
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <CheckBox
                        android:id="@+id/rememberMeCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/singInButton"
                        android:text="Remember me"/>
                    </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"/>
    </android.support.v7.widget.LinearLayoutCompat>


</RelativeLayout>
