<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_garden_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.henallux.freegarden.View.GardenRegisterActivity">

    <!--Layout vertical général-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutCompat">
        <TextView
            android:text="@string/newGardenMainTitle"
            android:textSize="@dimen/mainTitleTextSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/mainTitleMargin"/>
    <!--Layout horizontal englobant les différents champs-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>
            <!--Layout vertical englobant les différents champs-->
            <ScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <TextView
                        android:text="@string/titleTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titleTextSize"
                        android:paddingTop="@dimen/titleTopMargin"/>
                    <!--Layout horizontal global englobant la section title-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="Title"
                            android:layout_weight="90"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <TextView
                        android:text="@string/addressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titleTextSize"
                        android:paddingTop="@dimen/titleTopMargin"/>

                    <!--Layout horizontal global englobant la section adresse-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <!--Layout vertical général de la section adresse-->
                        <android.support.v7.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="90">
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="Street :"
                                    android:textSize="@dimen/labelTextSize"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="Street"
                                    android:layout_weight="50"/>
                                </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="Street number :"
                                    android:textSize="@dimen/labelTextSize"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="0"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="City :"
                                    android:textSize="@dimen/labelTextSize"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="City"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                            <android.support.v7.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:text="Postal code :"
                                    android:textSize="@dimen/labelTextSize"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"/>
                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:hint="00000"
                                    android:layout_weight="50"/>
                            </android.support.v7.widget.LinearLayoutCompat>
                        </android.support.v7.widget.LinearLayoutCompat>
                    </android.support.v7.widget.LinearLayoutCompat>

                    <TextView
                        android:text="@string/limitationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/titleTextSize"
                        android:paddingTop="@dimen/titleTopMargin"/>
                    <!--Layout horizontal global englobant la section limitation-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="10"/>
                        <TextView
                            android:text="@string/limitation"
                            android:textSize="@dimen/labelTextSize"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="70"
                            android:labelFor="@+id/limitationInput"
                            android:layout_marginBottom="5dp"/>
                        <EditText
                            android:id="@+id/limitationInput"
                            android:hint="0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                    <!--Layout du bouton register-->
                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">
                        <android.support.v4.widget.Space
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/registerGardenButton"
                            android:text="@string/registerGardenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:textAllCaps="false"/>
                    </android.support.v7.widget.LinearLayoutCompat>
                </android.support.v7.widget.LinearLayoutCompat>
            </ScrollView>
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>


</RelativeLayout>
